<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IS 413 Intents Example</string>
    <string name="fvString">Future Value </string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_future_value">Future Value Example</string>
    <string name="returnToMain">Return to Main Activity</string>
    <string name="presentValuePrompt">Present Value in $:</string>
    <string name="intialPresentValue">1000</string>
    <string name="interestRatePrompt">Interest Rate in %:</string>
    <string name="initialInterestRate">6</string>
    <string name="compoundingPrompt">Compounding Periods:</string>
    <string name= "initialCompounding">12</string>
    <string name="submit">Submit</string>
    
    <string name="hint_amount">enter initial value</string>
    <string name="hint_rate">enter interest rate</string>
    <string name="hint_compounding">compounding periods</string>

</resources>